kubernetes/quiz/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: quiz
spec:
  selector:
    app: quiz
  ports:
    - port: 8000
      targetPort: 8000
